unoyewebapiingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-for-unoyeapi
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
  - hosts:
    - apiaz.unoye.com
  rules:
  - host: apiaz.unoye.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unoyewebapi
            port:
              number: 5000
