unoyewebsiteuiingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-for-unoyewebsiteui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - frontendaz.unoye.com
    secretName: frontendaz-com-tls
  rules:
  - host: frontendaz.unoye.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unoyewebsiteui
            port:
              number: 80
